--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,7 @@
-spring.application.name=controle-estoque
+### Defina o perfil ativo: Docker ou SQL Server
 
-# Configuração do banco de dados MySQL
-spring.datasource.url=jdbc:mysql://localhost:3307/controle-estoque?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=P4ssw0rd
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+## docker >>> Ativa o arquivo: application-docker.properties
+#spring.profiles.active=docker
 
-# Configuração do Thymeleaf
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.cache=false
-
-# Logs
-logging.level.org.springframework.web=DEBUG
-logging.level.br.edu.fateczl.controle_estoque.controller=DEBUG
-logging.level.br.edu.fateczl.controle_estoque.service=DEBUG
-logging.level.br.edu.fateczl.controle_estoque.repository=DEBUG
+## sqlserver >>> Ativa o arquivo: application-sqlserver.properties
+spring.profiles.active=sqlserver
