--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,7 +1,7 @@
 spring.application.name=controle-estoque
 
 # Configuração do banco de dados MySQL
-spring.datasource.url=jdbc:mysql://localhost:3307/controle-estoque?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3307/controle_estoque?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=P4ssw0rd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
