--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.5</version> <!-- Versão estável do Spring Boot -->
+        <version>3.3.5</version> 
         <relativePath />
     </parent>
 
@@ -22,6 +22,14 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.3.1</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -70,10 +78,9 @@
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
-            <version>9.1.0</version>
+            <version>8.0.33</version> <!-- Atualize para a versão mais recente, caso necessário -->
             <scope>runtime</scope>
         </dependency>
-
 
         <!-- Conector para comunicação com o SQL Server -->
         <dependency>
@@ -82,8 +89,7 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Dependência do Lombok para gerar código automaticamente, como getters, setters e
-        construtores -->
+        <!-- Dependência do Lombok para gerar código automaticamente, como getters, setters e construtores -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
