--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,22 +1,20 @@
-spring.application.name=controle-estoque
-
-# ConfiguraÁ„o do banco de dados MySQL
-spring.datasource.url=jdbc:mysql://localhost:3307/controle_estoque?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+# Configura√ß√£o do banco de dados
+spring.datasource.url=jdbc:mysql://localhost:3306/controle_estoque?useSSL=false &
+serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=P4ssw0rd
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Configura√ß√£o do HikariCP (pool de conex√µes)
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.max-lifetime=600000
+
+# Configura√ß√£o do JPA
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# ConfiguraÁ„o do Thymeleaf
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.cache=false
-
-# Logs
-logging.level.org.springframework.web=DEBUG
-logging.level.br.edu.fateczl.controle_estoque.controller=DEBUG
-logging.level.br.edu.fateczl.controle_estoque.service=DEBUG
-logging.level.br.edu.fateczl.controle_estoque.repository=DEBUG
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
