feat(Banco de Dados): renomeia arquivo de configuração para MySQL e ajusta propriedades

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ### Defina o perfil ativo: Docker ou SQL Server
 
-## docker >>> Ativa o arquivo: application-docker.properties
-#spring.profiles.active=docker
+## docker >>> Ativa o arquivo: application-mysql.properties
+#spring.profiles.active=mysql
 
 ## sqlserver >>> Ativa o arquivo: application-sqlserver.properties
 spring.profiles.active=sqlserver
