--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -1,4 +1,4 @@
-# ConfiguraÃ§Ã£o do banco de dados
+# Configurações do banco de dados
 spring.datasource.url=jdbc:mysql://localhost:3306/controle_estoque?useSSL=false &
 serverTimezone=UTC
 spring.datasource.username=root
@@ -7,14 +7,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# ConfiguraÃ§Ã£o do HikariCP (pool de conexÃµes)
+# Configurações do HikariCP (pool de conexões)
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.max-lifetime=600000
 
-# ConfiguraÃ§Ã£o do JPA
+# Configurações do JPA
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
