--- a/pom.xml
+++ b/pom.xml
@@ -129,5 +129,11 @@
             <version>5.1.0</version>
         </dependency>
 
+        <!-- Dependência para integração com o H2 Database (banco de dados em memória) -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 </project>
